[package]
name = "spenben"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
anyhow = {version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting", "macros"] }
ahash = "0.8"
toml = "0.5"
regex = "1.7"
num-format = "0.4"
ordered-float = "0.3"
clap = { version = "4.0", features = ["derive"] }
