[package]
name = "spenben"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
anyhow = {version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
ahash = "0.8"
toml = "0.8"
regex = "1.7"
num-format = "0.4"
ordered-float = "4.1"
clap = { version = "4.0", features = ["derive"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
oorandom = "11.1"
serde_json = "1"
rust_xlsxwriter = "0.56"
encoding_rs = "0.8.32"
chrono = { version = "0.4.31", features = ["serde"] }

[profile.release]
lto=true
strip="debuginfo"
